--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -49,7 +49,7 @@ exclude: |
       tests/.*/ref/.*
     )$
 
-default_stages: [commit]
+default_stages: [pre-commit]
 
 repos:
     - repo: https://github.com/pre-commit/pre-commit-hooks
