--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,58 @@ configs/dram/lowp_sweep.cfg
 .vscode
 typings
 .DS_Store
+
+src/pim/test/sleep
+src/pim/uPIMulator_backend/src/main.o
+src/pim/uPIMulator_backend/src/abi/cc/_base_cc.o
+src/pim/uPIMulator_backend/src/abi/instruction/instruction.o
+src/pim/uPIMulator_backend/src/abi/reg/pair_reg.o
+src/pim/uPIMulator_backend/src/abi/reg/src_reg.o
+src/pim/uPIMulator_backend/src/abi/word/_base_word.o
+src/pim/uPIMulator_backend/src/converter/condition_converter.o
+src/pim/uPIMulator_backend/src/converter/endian_converter.o
+src/pim/uPIMulator_backend/src/converter/flag_converter.o
+src/pim/uPIMulator_backend/src/converter/instruction_converter.o
+src/pim/uPIMulator_backend/src/converter/op_code_converter.o
+src/pim/uPIMulator_backend/src/converter/reg_converter.o
+src/pim/uPIMulator_backend/src/converter/reg_file_converter.o
+src/pim/uPIMulator_backend/src/converter/suffix_converter.o
+src/pim/uPIMulator_backend/src/encoder/byte_stream.o
+src/pim/uPIMulator_backend/src/encoder/instruction_encoder.o
+src/pim/uPIMulator_backend/src/initializer/int_initializer.o
+src/pim/uPIMulator_backend/src/initializer/str_initialzier.o
+src/pim/uPIMulator_backend/src/simulator/system.o
+src/pim/uPIMulator_backend/src/simulator/cpu/cpu.o
+src/pim/uPIMulator_backend/src/simulator/cpu/fini_thread.o
+src/pim/uPIMulator_backend/src/simulator/cpu/init_thread.o
+src/pim/uPIMulator_backend/src/simulator/cpu/sched_thread.o
+src/pim/uPIMulator_backend/src/simulator/cpu/thread.o
+src/pim/uPIMulator_backend/src/simulator/dpu/alu.o
+src/pim/uPIMulator_backend/src/simulator/dpu/cycle_rule.o
+src/pim/uPIMulator_backend/src/simulator/dpu/dma_command.o
+src/pim/uPIMulator_backend/src/simulator/dpu/dma.o
+src/pim/uPIMulator_backend/src/simulator/dpu/dpu.o
+src/pim/uPIMulator_backend/src/simulator/dpu/logic.o
+src/pim/uPIMulator_backend/src/simulator/dpu/operand_collector.o
+src/pim/uPIMulator_backend/src/simulator/dpu/pipeline.o
+src/pim/uPIMulator_backend/src/simulator/dpu/revolver_scheduler.o
+src/pim/uPIMulator_backend/src/simulator/dpu/thread.o
+src/pim/uPIMulator_backend/src/simulator/dram/fifo_scheduler.o
+src/pim/uPIMulator_backend/src/simulator/dram/frfcfs_scheduler.o
+src/pim/uPIMulator_backend/src/simulator/dram/memory_command.o
+src/pim/uPIMulator_backend/src/simulator/dram/memory_controller.o
+src/pim/uPIMulator_backend/src/simulator/dram/mram.o
+src/pim/uPIMulator_backend/src/simulator/dram/row_buffer.o
+src/pim/uPIMulator_backend/src/simulator/dram/scheduler.o
+src/pim/uPIMulator_backend/src/simulator/dram/wordline.o
+src/pim/uPIMulator_backend/src/simulator/rank/rank.o
+src/pim/uPIMulator_backend/src/simulator/reg/condition_reg.o
+src/pim/uPIMulator_backend/src/simulator/reg/gp_reg.o
+src/pim/uPIMulator_backend/src/simulator/reg/reg_file.o
+src/pim/uPIMulator_backend/src/simulator/reg/sp_reg.o
+src/pim/uPIMulator_backend/src/simulator/sram/atomic.o
+src/pim/uPIMulator_backend/src/simulator/sram/iram.o
+src/pim/uPIMulator_backend/src/simulator/sram/lock.o
+src/pim/uPIMulator_backend/src/simulator/sram/wram.o
+src/pim/uPIMulator_backend/src/util/argument_parser.o
+src/pim/uPIMulator_backend/src/util/stat_factory.o
