--- a/src/learning_gem5/part2/SConscript
+++ b/src/learning_gem5/part2/SConscript
@@ -1,4 +1,5 @@
-# Copyright (c) 2017 Jason Lowe-Power
+# -*- coding: utf-8 -*-
+# Copyright (c) 2016 Jason Lowe-Power
 # All rights reserved.
 #
 # Redistribution and use in source and binary forms, with or without
@@ -24,31 +25,19 @@
 # (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 # OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
-from m5.params import *
-from m5.SimObject import SimObject
+Import('*')
 
+SimObject('SimpleObject.py', sim_objects=['SimpleObject'])
+SimObject('HelloObject.py', sim_objects=['HelloObject', 'GoodbyeObject'])
+SimObject('SimpleMemobj.py', sim_objects=['SimpleMemobj'])
+SimObject('SimpleCache.py', sim_objects=['SimpleCache'])
 
-class HelloObject(SimObject):
-    type = "HelloObject"
-    cxx_header = "learning_gem5/part2/hello_object.hh"
-    cxx_class = "gem5::HelloObject"
+Source('simple_object.cc')
+Source('hello_object.cc')
+Source('goodbye_object.cc')
+Source('simple_memobj.cc')
+Source('simple_cache.cc')
 
-    time_to_wait = Param.Latency("Time before firing the event")
-    number_of_fires = Param.Int(
-        1, "Number of times to fire the event before goodbye"
-    )
-
-    goodbye_object = Param.GoodbyeObject("A goodbye object")
-
-
-class GoodbyeObject(SimObject):
-    type = "GoodbyeObject"
-    cxx_header = "learning_gem5/part2/goodbye_object.hh"
-    cxx_class = "gem5::GoodbyeObject"
-
-    buffer_size = Param.MemorySize(
-        "1kB", "Size of buffer to fill with goodbye"
-    )
-    write_bandwidth = Param.MemoryBandwidth(
-        "100MB/s", "Bandwidth to fill the buffer"
-    )
+DebugFlag('HelloExample', "For Learning gem5 Part 2. Simple example debug flag")
+DebugFlag('SimpleMemobj', "For Learning gem5 Part 2.")
+DebugFlag('SimpleCache', "For Learning gem5 Part 2.")
